finished lab4, to be uploaded